--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "formik": "^2.0.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.2.0",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.1",
     "yup": "^0.28.0"
   },
