--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.0.8",
     "netlify-cli": "^2.25.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
